cambio en url cv

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="navigation-links">
                 <a href="#" data-text="INICIO" id="inicio-link" >INICIO</a>
-                <a href="#cv" data-text="MI CV" id="cv-link" >MI CV</a>
+                <a href="#" data-text="MI CV" id="cv-link" >MI CV</a>
                 <a href="#" data-text="BLOG" id="blog-link" >BLOG</a>
                 <a href="#" data-text="PORTAFOLIO" id="portafolio-link" >PORTAFOLIO</a>
                 <a href="#" data-text="CONTACTO" id="contacto-link" >CONTACTO</a>
