se agrega links a imagen de proyecto

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
             </div>
             <!--header image-->
             <div class="header-image">
-            <!-- <img src="images/361972734_6746720135395321_519215280714364802_n.jpg" alt="logo"> -->
             </div>
             <!--header image end-->
         </div>
@@ -341,7 +340,9 @@
              <div id="portfolio-content">
                  <div class="portfolio portfolio-first">
                      <div class="portfolio-image">
+                     <a href="https://yerko09.github.io/IguanaPage" target="_blank">
                         <img src="images/iguana_page_cover.png" alt="captura de maqueta Iguana page">
+                     </a>
                      </div>
                      <div class="portfolio-text">
                          <h2>Iguana Page</h2>
@@ -352,7 +353,9 @@
                  </div>
                  <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
+                    <a href="https://yerko09.github.io/Cuppon" target="_blank">
                         <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                    </a>
                     </div>
                     <div class="portfolio-text">
                         <h2>Cuppon</h2>
