link en cover de proyectos

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                  <div class="portfolio portfolio-first">
                      <div class="portfolio-image">
                      <a href="https://yerko09.github.io/IguanaPage" target="_blank">
-                        <img src="images/iguana_page_cover.png" alt="captura de maqueta Iguana page">
+                        <img src="images/iguana_page_cover.png" alt="vistaprevia Iguana page">
                      </a>
                      </div>
                      <div class="portfolio-text">
@@ -354,7 +354,7 @@
                  <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
                     <a href="https://yerko09.github.io/Cuppon" target="_blank">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                        <img src="images/cuppon_cover.png" alt="vistaprevia Cuppon">
                     </a>
                     </div>
                     <div class="portfolio-text">
