--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <a href="theme-particle.html">
+                <a href="index.html">
                     <img src="images/willy wonka logo.png" alt="logo">
                 </a>
             </div>
@@ -56,7 +56,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <a href="theme-particle.html">
+            <a href="index.html">
                 <img src="images/willy wonka logo.png" alt="logo">
             </a>
             <div class="menubar">
