Guille Valeria agrega un cambio en el menú desplegable

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <a href="#" data-text="BLOG" id="blog-link">BLOG</a>
                 <a href="#" data-text="PORTAFOLIO" id="portafolio-link">PORTAFOLIO</a>
                 <a href="#" data-text="CONTACTO" id="contacto-link">CONTACTO</a>
+                <a href="https://noxvill.github.io/index.html" data-text="APORTE-GUILLE-VALERIA" id="aporte-guille">APORTE GUILLE V.</a>
             </div>
         </div>
         <!--Navigator-Fullscreen END-->
