--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <div class="services-content">
                     <div class="service-one service wow">
                         <div class="service-img">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M0 96C0 43 43 0 96 0h96V190.7c0 13.4 15.5 20.9 26 12.5L272 160l54 43.2c10.5 8.4 26 .9 26-12.5V0h32 32c17.7 0 32 14.3 32 32V352c0 17.7-14.3 32-32 32v64c17.7 0 32 14.3 32 32s-14.3 32-32 32H384 96c-53 0-96-43-96-96V96zM64 416c0 17.7 14.3 32 32 32H352V384H96c-17.7 0-32 14.3-32 32z"/></svg>
+                            <img src="images/diploma.gif" alt="service-one">
                         </div>
                         <div class="service-description">
                             <h2>Técnico en Computación e Informática</h2>
@@ -224,7 +224,7 @@
                     </div>
                     <div class="service-two service wow">
                         <div class="service-img">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><path d="M160 64c0-35.3 28.7-64 64-64H576c35.3 0 64 28.7 64 64V352c0 35.3-28.7 64-64 64H336.8c-11.8-25.5-29.9-47.5-52.4-64H384V320c0-17.7 14.3-32 32-32h64c17.7 0 32 14.3 32 32v32h64V64L224 64v49.1C205.2 102.2 183.3 96 160 96V64zm0 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zM133.3 352h53.3C260.3 352 320 411.7 320 485.3c0 14.7-11.9 26.7-26.7 26.7H26.7C11.9 512 0 500.1 0 485.3C0 411.7 59.7 352 133.3 352z"/></svg>
+                            <img src="images/responsive.gif" alt="service-one">
                         </div>
                         <div class="service-description">
                             <h2>Desarrollador Front-End</h2>
@@ -233,7 +233,7 @@
                     </div>
                     <div class="service-three service wow">
                         <div class="service-img">
-                            <img src="images/coding.png" alt="service-one">
+                            <img src="images/coding.gif" alt="service-one">
                         </div>
                         <div class="service-description">
                             <h2>Desarrollador FullStack-Javascript</h2>
@@ -249,7 +249,7 @@
                 <div class="services-content">
                     <div class="service-one service wow">
                         <div class="service-img">
-                            <img src="images/coding.png" alt="service-one">
+                            <img src="images/computer.gif" alt="service-one">
                         </div>
                         <div class="service-description">
                             <h2>+2 Años en Desarrollo Web</h2>
@@ -260,7 +260,7 @@
 
                     <div class="service-three service wow">
                         <div class="service-img">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><path d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM625 177L497 305c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L591 143c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
+                            <img src="images/user.gif" alt="service-one">
                         </div>
                         <div class="service-description">
                             <h2>+2 años de técnico de instalaciones en terreno</h2>
@@ -273,7 +273,7 @@
 
             <div id="skills">
                 <div class="skills-header">
-                    My <span class="color"> Skills</span>
+                    Mis <span class="color"> Skills</span>
                 </div>
                 <div class="skills-content " style="text-align: center;">
                     <div class="skill-html skill">
@@ -299,11 +299,11 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                             <div class="html">
-                                Adobe Ps
+                                Bootstrap
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="adobe-progress wow">83%</div>
+                            <div class="adobe-progress wow">80%</div>
                         </div>
                     </div>
                     <div class="skill-html skill">
@@ -313,7 +313,7 @@
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="php-progress wow">87%</div>
+                            <div class="php-progress wow">40%</div>
                         </div>
                     </div>
                     <div class="skill-html skill">
@@ -323,17 +323,17 @@
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="jquery-progress wow">94%</div>
+                            <div class="jquery-progress wow">40%</div>
                         </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                             <div class="html">
-                                SEO
+                                GIT
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="seo-progress wow">84%</div>
+                            <div class="seo-progress wow">50%</div>
                         </div>
                     </div>
                 </div>
