--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="css/index.css">
     <!--main css file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
-    <script src="https://kit.fontawesome.com/b4898d4284.js" crossorigin="anonymous"></script>
+    <!-- bootstrap cdn-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -162,10 +163,10 @@
                         <span class="about-second-line"> Mi nombre es Yerko Browton, tengo 28 años, de profesión en
                             Técnico Computación e Informática. Actualmente me desempeño como Desarrollador Web en
                             Haciendo Páginas, desarrollando todo tipo de sitios con el CMS Wordpress.
-                            El desarrollo de aplicaciones y páginas web es de grán interés para mí, aunque mi verdadera
+                            El desarrollo de aplicaciones y páginas web es de gran interés para mí, aunque mi verdadera
                             y más grande pasión es la tecnología en sí.</span>
                         <div class="cv">
-                            <a href="#"><button>Descarga mi <span class="colors">CV</span></button></a>
+                            <a href="./documentos/CV-Yerko Browton.pdf" target="_blank"><button>Descarga mi <span class="colors">CV</span></button></a>
                         </div>
                     </div>
                     <!--about picture-->
@@ -303,7 +304,7 @@
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="adobe-progress wow">80%</div>
+                            <div class="bootstrap-progress wow">80%</div>
                         </div>
                     </div>
                     <div class="skill-html skill">
@@ -313,7 +314,7 @@
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="php-progress wow">40%</div>
+                            <div class="php-progress wow">50%</div>
                         </div>
                     </div>
                     <div class="skill-html skill">
@@ -333,7 +334,7 @@
                             </div>
                         </div>
                         <div class="html-prog wow prog">
-                            <div class="seo-progress wow">50%</div>
+                            <div class="git-progress wow">50%</div>
                         </div>
                     </div>
                 </div>
