--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 <!--Contact information-->
                 <div class="contact-info">
                     <div class="contact-info-header">
-                        Contact Info
+                        Información De Contacto
                     </div>
                     <div class="contact-info-content">
                         <div class="contect-info-content-line">
