--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords"
         content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
     <meta name="author" content="Yerko Browton" />
-    <title>Yerko Browton - Desarrollo WEB</title>
+    <title>Yerko Browton - Desarrollo WEB Oct 2023</title>
     <!--favicon-img-->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!--favicon-img-->
