agrego el portafolio de bootstrap en PORTAFOLIO

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords"
         content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
     <meta name="author" content="Yerko Browton" />
-    <title>Yerko Browton - Desarrollo WEB</title>
+    <title>Mi Portafolio - Yerko Browton</title>
     <!--favicon-img-->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!--favicon-img-->
@@ -17,7 +17,8 @@
     <!--main css file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <!-- bootstrap cdn-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -55,7 +56,6 @@
                 <a href="#" data-text="BLOG" id="blog-link">BLOG</a>
                 <a href="#" data-text="PORTAFOLIO" id="portafolio-link">PORTAFOLIO</a>
                 <a href="#" data-text="CONTACTO" id="contacto-link">CONTACTO</a>
-                <a href="https://noxvill.github.io/index.html" data-text="APORTE-GUILLE-VALERIA" id="aporte-guille">APORTE GUILLE V.</a>
             </div>
         </div>
         <!--Navigator-Fullscreen END-->
@@ -77,14 +77,12 @@
             <div id="particles"></div>
             <!--iconos, Links Redes Sociales-->
             <div class="social-media-links">
-                <a href="https://www.linkedin.com/in/yerkobrowton/"><img src="images/linkedin logo.png"
-                        class="social-media" alt="linkedin-logo"></a>
-                <a href="https://github.com/YERKO09"><img src="images/github-icon.png" class="social-media"
-                        alt="github-icono"></a>
-                <a href="https://www.instagram.com/yerkobrowton2023"><img src="images/instagram logo.png"
-                        class="social-media"
-                        alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-
+                <a href="https://www.linkedin.com/in/yerkobrowton/">
+                    <img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://github.com/YERKO09">
+                    <img src="images/github-icon.png" class="social-media" alt="github-icono"></a>
+                <a href="https://www.instagram.com/yerkobrowton2023">
+                    <img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a>
             </div>
             <!--iconos, Links Redes Sociales _Fin-->
 
@@ -98,11 +96,11 @@
                     </div>
 
                     <div class="contact">
-                        <a href="Mailto:yerko.browton1995@hotmail.com"><img src="images/mail.png"
-                                alt="imagen-correo"" class=" contactpic"></a><!--Your email Id write in place of "#"-->
-                        <a href="https://api.whatsapp.com/send?phone=56978247853"><img
-                                src="images/WhatsApp-Icon-removebg-preview.png" alt="imagen-WhatsApp"
-                                class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+                        <a href="Mailto:yerko.browton1995@hotmail.com">
+                            <img src="images/mail.png" alt="imagen-correo"" class=" contactpic"></a>
+                        <a href="https://api.whatsapp.com/send?phone=56978247853">
+                            <img src="images/WhatsApp-Icon-removebg-preview.png" alt="imagen-WhatsApp"
+                                class="contactpic"></a>
                     </div>
                 </div>
             </div>
@@ -166,7 +164,8 @@
                             El desarrollo de aplicaciones y páginas web es de gran interés para mí, aunque mi verdadera
                             y más grande pasión es la tecnología en sí.</span>
                         <div class="cv">
-                            <a href="./documentos/CV-Yerko Browton.pdf" target="_blank"><button>Descarga mi <span class="colors">CV</span></button></a>
+                            <a href="./documentos/CV-Yerko Browton.pdf" target="_blank"><button>Descarga mi <span
+                                        class="colors">CV</span></button></a>
                         </div>
                     </div>
                     <!--about picture-->
@@ -385,10 +384,12 @@
                 <span class="header-caption"> Prototipos y Maquetas<span class="color"> Desafío Latam</span></span>
             </div>
             <div id="portfolio-content">
+
+                <!-- proyecto 1 -->
                 <div class="portfolio portfolio-first">
                     <div class="portfolio-image">
                         <a href="https://yerko09.github.io/IguanaPage" target="_blank">
-                            <img src="images/iguana_page_cover.png" alt="vistaprevia Iguana page">
+                            <img src="images/iguana_page_cover.png" alt="vista previa Iguana Page">
                         </a>
                     </div>
                     <div class="portfolio-text">
@@ -401,10 +402,12 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- proyecto 2 -->
                 <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
                         <a href="https://yerko09.github.io/Cuppon" target="_blank">
-                            <img src="images/cuppon_cover.png" alt="vistaprevia Cuppon">
+                            <img src="images/cuppon_cover.png" alt="vista previa Cuppon">
                         </a>
                     </div>
                     <div class="portfolio-text">
@@ -418,32 +421,21 @@
                     </div>
                 </div>
 
+                <!-- proyecto 3 -->
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-third">
+                        <a href="https://yerko09.github.io/fdsw-github/" target="_blank">
+                            <img src="./images/portafolio-bootstrap-cover.png" alt="vistaprevia portfolio bootstrap">
+                        </a>
                     </div>
                     <div class="portfolio-text">
-                        <h2>UI Designing</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                            expedita eius dignissimos
-                            .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i
+                        <h2>Portafolio Bootstrap</h2>
+                        <p>Este sitio es una plantilla modificada a partir de un repositorio de github:</p>
+                        <div class="button"><a href="#"><button><span class="index"> Ver proyecto<i
                                             class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
-                <div class="portfolio portfolio-fourth">
-                    <div class=" portfolio-image">
-                        <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
-                    </div>
-                    <div class="portfolio-text">
-                        <h2>Wow Graphics</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                            expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem
-                            ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i
-                                            class="gg-arrow-right"></i></span></button></a></div>
-                    </div>
-                </div>
+        
             </div>
             <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
@@ -628,13 +620,14 @@
                 </div>
             </div>
             <div class="contact-header">Contacto<span class="color">_</span>
-                <div class="contact-header-caption"> <span class="color">Pongámonos en </span>contacto?</div>
+                <div class="contact-header-caption"> <span class="color">Enviame un mensaje </span>y coordinemos una
+                    reunión</div>
             </div>
             <div class="contact-content">
                 <!--Contact form-->
                 <div class="contact-form">
                     <div class="form-header">
-                        Complete el siguiente formulario:
+                        Completa el siguiente formulario:
                     </div>
                     <form id="myForm" action="#">
                         <div class="input-line">
@@ -652,7 +645,7 @@
                 <!--Contact information-->
                 <div class="contact-info">
                     <div class="contact-info-header">
-                        Contact Info
+                        Datos de contacto
                     </div>
                     <div class="contact-info-content">
                         <div class="contect-info-content-line">
